# prefilled-json

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  README.md  benchmark_prefilled_vs_prompting.py  benchmark_results.md  comprehensive_accuracy_benchmark.py  comprehensive_json_benchmark.py  focused_accuracy_benchmark.py  focused_complexity_benchmark.py  pyproject.toml  realistic_conversation_benchmark.py  test_integration.py  test_llama_compatible.py  test_vllm_basic.py  test_vllm_json_integration.py  test_vllm_multi_model.py
.claude/: settings.local.json
benchmarks/: customer_support_benchmark.py  guided_generation_benchmark.py  kv_cache_benchmark.py  simple_kv_cache_test.py
driver/: json_driver.py
examples/: basic_usage.py  vllm_example.py  vllm_plugin_example.py
tests/unit/driver/: test_json_driver.py  test_stop_token_json_driver.py
tests/unit/prefilled_json/: test_driver.py  test_vllm_integration.py
tests/unit/vllm_plugin/: test_json_prefilled_plugin.py  test_streaming_driver.py
vllm_plugin/: json_prefilled_plugin.py
